@@ -33,12 +33,6 @@
 debian/distribution.ini @MOZ_LIBDIR@/distribution
 
 @MOZ_LIBDIR@/browser/extensions/\{972ce4c6-7e08-4474-a285-3208198ce6fd\} @MOZ_ADDONDIR@/extensions
-%%if MOZ_UPDATE_CHANNEL == beta
-%%define SHIP_TESTPILOT
-%%endif
-%%ifdef SHIP_TESTPILOT
-@MOZ_LIBDIR@/distribution/extensions/testpilot@labs.mozilla.com.xpi @MOZ_ADDONDIR@/distribution/extensions
-%%endif
 
 debian/@MOZ_APP_NAME@.desktop usr/share/applications
 debian/apport/source_@MOZ_PKG_NAME@.py usr/share/apport/package-hooks/
